--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 blinker==1.4
 Click==7.0
+cycler==0.10.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 itsdangerous==1.1.0
 Jinja2==2.10
+kiwisolver==1.0.1
 MarkupSafe==1.1.0
+matplotlib==3.0.2
+numpy==1.16.1
+pandas==0.24.1
 pkg-resources==0.0.0
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+scikit-learn==0.20.2
+scipy==1.2.1
+six==1.12.0
+sklearn==0.0
 Werkzeug==0.14.1
