--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Click==7.0
 cycler==0.10.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
 itsdangerous==1.1.0
 Jinja2==2.10
 kiwisolver==1.0.1
@@ -11,6 +12,7 @@ matplotlib==3.0.2
 numpy==1.16.1
 pandas==0.24.1
 pkg-resources==0.0.0
+psycopg2==2.7.7
 pyparsing==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
@@ -18,4 +20,5 @@ scikit-learn==0.20.2
 scipy==1.2.1
 six==1.12.0
 sklearn==0.0
+SQLAlchemy==1.2.18
 Werkzeug==0.14.1
