--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ python-dateutil==2.8.0
 pytz==2018.9
 scikit-learn==0.20.2
 scipy==1.2.1
+seaborn==0.9.0
 six==1.12.0
 sklearn==0.0
 SQLAlchemy==1.2.18
